  * debian/*: Remove references to libbsd-compat.a which is no longer built.
  * debian/sysdeps/powerpc.mk: Follow rename of stubs-64.h to stubs-64-v1.h.
  * debian/patches/any/submitted-sysdeps-auxv.diff: Fix implicit declaration
    when including <sys/auxv.h> in the testsuite by fixing up header guards.
  * expected-results-aarch64-linux-gnu-libc: Tolerate fenv-tls test failure.

  [ Aurelien Jarno ]
  * debian/debhelper.in/libc.preinst: remove check for sparc32 kernel, the
    support has been removed with Lenny.
  * debian/debhelper.in/libc.preinst: remove code to upgrade armhf systems
    from pre-Wheezy versions.
  * debian/debhelper.in/libc.preinst: don't act on the filesystem until it
    is sure that the libc is going to be upgraded.
  * debian/debhelper.in/libc.preinst: stop checking for /etc/init.d/glibc.sh
    on upgrade, we don't support lenny to jessie upgrades.
  * debhelper.in/libc-alt.preinst: drop, we don't support lenny to jessie
    upgrades.

  [ Samuel Thibault ]
  * Hurd fixes for new upstream
    - debian/patches/hurd-i386/libpthread_version.diff: Rebased.
    - debian/patches/hurd-i386/submitted-net.diff: Rebased.
    - debian/patches/hurd-i386/tg-elfosabi_gnu.diff: Fixed upstream.
    - debian/patches/hurd-i386/tg-pthread-atfork.diff: Fixed upstream.
    - debian/patches/hurd-i386/tg-tls-threadvar.diff: Rebased.
    - debian/patches/hurd-i386/tg-tls.diff: Rebased.
    - debian/patches/hurd-i386/unsubmitted-gnumach.defs.diff: Rebased.
    - update testsuite hurd-i386 results.

 -- Adam Conrad <adconrad@0c3.net>  Sun, 09 Feb 2014 09:46:13 -0700

eglibc (2.18-5) UNRELEASED; urgency=medium

  [ Samuel Thibault ]
  * patches/hurd-i386/tg-mmap_file_prot_none_fix.diff: New patch, fixes locale
    generation.

 -- Aurelien Jarno <aurel32@debian.org>  Sun, 02 Mar 2014 16:19:49 +0100

eglibc (2.18-4) unstable; urgency=high

  [ Aurelien Jarno ]
  * debian/debhelper.in/libc.preinst: Don't fail if the dynamic loader