@@ -39,6 +39,7 @@ eglibc (2.19-0experimental0) UNRELEASED; urgency=medium
   * debian/patches/any/submitted-sysdeps-auxv.diff: Fix implicit declaration
     when including <sys/auxv.h> in the testsuite by fixing up header guards.
   * expected-results-aarch64-linux-gnu-libc: Tolerate fenv-tls test failure.
+  * debian/rules.d/tarball.mk: Add an update-from-upstream-git glibc target.
 
   [ Aurelien Jarno ]
   * debian/debhelper.in/libc.preinst: remove check for sparc32 kernel, the
